--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "React-Node-ES6-Boilerplate",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "gulp unitSpecs",
     "start": "webpack-dev-server --colors --port 3000"
   },
-  "repository": {
-    "type": "git"
-  },
+  "repository": "https://github.com/brantstuns/React-Node-ES6-Boilerplate",
   "author": "Brant Stuns",
   "license": "ISC",
   "devDependencies": {
@@ -26,13 +24,17 @@
     "gulp-plumber": "^1.1.0",
     "gulp-util": "^3.0.7",
     "jasmine-ajax": "^3.2.0",
-    "webpack": "^1.13.3",
+    "webpack": "^2.2.1",
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "babel": "^6.5.2",
     "babel-polyfill": "^6.13.0",
+    "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cssimport": "^5.0.0",
+    "gulp-sass": "^3.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
