Added working mocha integration to npm but still need to get mocha working with gulp babel and webpack

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "test": "gulp unitSpecs",
+    "test": "mocha --compilers js:babel-core/register -R nyan ./test/**/*Test.js",
     "start": "webpack-dev-server --colors --port 3000"
   },
   "repository": "https://github.com/brantstuns/React-Node-ES6-Boilerplate",
@@ -16,14 +16,20 @@
     "babel-loader": "^6.2.7",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
     "colors": "^1.1.2",
     "gulp": "^3.9.1",
     "gulp-jasmine": "^2.4.0",
     "gulp-jasmine-browser": "^1.6.0",
+    "gulp-mocha": "^4.1.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.1.0",
     "gulp-util": "^3.0.7",
     "jasmine-ajax": "^3.2.0",
+    "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.2",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
     "webpack": "^2.2.1",
     "webpack-stream": "^3.2.0"
   },
